# platypus-phyloinformary

./: .gitignore  CMakeLists.txt  Makefile.am  README.txt  bootstrap.sh  configure.ac
examples/: .gitignore  CMakeLists.txt  README.txt
examples/sim-coalescent-trees/: sim-coalescent-trees.cpp
examples/src/include/: cmdopt.hpp
examples/src/sim-coalescent-trees/: CMakeLists.txt  sim-coalescent-trees.cpp
include/platypus/: coalescent.hpp  exception.hpp  nclreader.hpp  newick.hpp  numeric.hpp  platypus.hpp  tokenizer.hpp  tree.hpp  treebuilder.hpp
include/platypus/base/: base_producer.hpp  base_reader.hpp  base_writer.hpp
include/platypus/model/: archetypaltree.hpp  coalescent.hpp  datatable.hpp  standardinterface.hpp  standardtree.hpp  tree.hpp  treepattern.hpp
include/platypus/numeric/: function.hpp  rng.hpp
include/platypus/parse/: nclreader.hpp  newick.hpp
include/platypus/serialize/: newick.hpp
include/platypus/utility/: datatable.hpp  datatable.hpp.orig  exception.hpp  stream.hpp  testing.hpp  tokenizer.hpp
platypus/: coalescent.hpp  datareader.hpp  ncl_reader.hpp  nclreader.hpp  newick.hpp  reader.hpp  tokenizer.cpp  tokenizer.hpp  tree.hpp  treeproducer.hpp  treereader.hpp
platypus/numeric/: functions.hpp
platypus/utility/: exception.hpp
src/: ncl_reader.hpp  reader.hpp  tokenizer.cpp  tokenizer.hpp  tree.hpp
src/numeric/: rng.hpp
test/: CMakeLists.txt  Makefile.am
test/src/: basic_tree.cpp  basic_tree_children.cpp  basic_tree_deep_copy.cpp  basic_tree_leaf.cpp  basic_tree_level_order.cpp  basic_tree_postorder.cpp  basic_tree_preorder.cpp  basic_tree_sibling.cpp  data_tree.cpp  datatable_basic.cpp  datatable_calcs.cpp  default_interface.cpp  emplace_child.cpp  heterogenous_tree_deep_copy.cpp  heterogenous_tree_deep_copy2.cpp  max_balanced_tree_even_non_power_of_two.cpp  max_balanced_tree_even_power_of_two.cpp  max_balanced_tree_odd.cpp  max_balanced_tree_sim.cpp  max_unbalanced_tree_left.cpp  max_unbalanced_tree_right.cpp  newick_reader_basic.cpp  newick_reader_basic2.cpp  newick_reader_blank_nodes.cpp  newick_reader_edge_lengths.cpp  newick_reader_missing_commas.cpp  newick_reader_missing_semicolon.cpp  newick_reader_multi_semicolons.cpp  newick_reader_multitrees.cpp  newick_reader_tree_stats.cpp  newick_vector_reader.cpp  newick_writer_basic.cpp  platypus_testing.cpp  platypus_testing.hpp  standard_interface.cpp  tests.cpp  tests.hpp  tokenizer_captured_delimiters.cpp  tokenizer_comment_capture.cpp  tokenizer_comments.cpp  (+4 more)
